# IRbaby_ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RELEASE_NOTES_v0.6.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig\  sdkconfig\.old  tags
.cache/clangd/index/: core_http_client.c.BC0A7B4E2691AAF7.idx  core_http_client.h.1F0AC6BD46A798FB.idx  core_http_client_private.h.32045FAC0F60D3E0.idx  core_http_config_defaults.h.5E0DA88409DED70B.idx  download.c.73B46D6B4EE0EA8F.idx  download.h.17100DE575489763.idx  form_parser.c.C1F1CC9B931F827C.idx  form_parser.h.2593F70A567F60B0.idx  handler.c.A5A0A53FFD4C3423.idx  handler.h.65A634E755C62063.idx  http_client.c.5DD2CED1AFC75993.idx  http_client.h.7EF5C60FF3E6FD36.idx  http_parser.c.B4859DDF9D8E52EB.idx  http_parser.h.2B208EFEE4F1245A.idx  ir_ac_apply.c.02DD174912A6E3AF.idx  ir_ac_apply.h.4A887D500041BDD6.idx  ir_ac_binary_parse.c.CF15FD154F9DC7F2.idx  ir_ac_binary_parse.h.6B82A29AA516BBDD.idx  ir_ac_build_frame.c.9DE18A6CED2EA595.idx  ir_ac_build_frame.h.A1015BF82E48B523.idx  ir_ac_control.c.85D6E6120D8BA886.idx  ir_ac_control.h.75291ED8150B9F89.idx  ir_ac_parse_forbidden_info.c.8B6DB49FEF4BF03E.idx  ir_ac_parse_forbidden_info.h.997D7952594152EC.idx  ir_ac_parse_frame_info.c.762FA0F35746FC80.idx  ir_ac_parse_frame_info.h.8E6BFE993EC94329.idx  ir_ac_parse_parameter.c.E38AB48BD52E16DE.idx  ir_ac_parse_parameter.h.14E2555A41FF5A49.idx  ir_decode.c.AD41BDC201932DC5.idx  ir_decode.h.DB6E546ED43EB51A.idx  ir_defs.h.983B8EF6739CD196.idx  ir_tv_control.c.9221FD7708CF9BB8.idx  ir_tv_control.h.E9A0D981953C8600.idx  ir_utils.c.1EB07412BDECD8B0.idx  ir_utils.h.1E5A0CB940E041A5.idx  irbaby.c.2CF4995181D78B5D.idx  irbaby.h.77C0DABD7FD5A4FD.idx  log.h.EC1CBF23710E1CE7.idx  main.c.DF0A6AD278802E7E.idx  peripherals.c.98D9B4EAD09EDFB5.idx  (+10 more)
.github/workflows/: main.yml
components/IRbaby/: CMakeLists.txt
main/: CMakeLists.txt  conf.c  conf.h  dns_server.c  dns_server.h  form_parser.c  form_parser.h  handler.c  handler.h  homekit.c  homekit.h  http_request_example_main.c  ir.c  ir.h  main.c  mqtt.c  mqtt.h  obj.c  obj.h  ota.c  version.h  web.c  web.h  web_handler.c  web_handler.h  wifimanager.c  wifimanager.h
main/front/: config.json  irext.js  root.html  wificonfig.html
